--- a/src/br/imd/vision/Main.fxml
+++ b/src/br/imd/vision/Main.fxml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.imd.controller.EventHandler">
    <children>
-      <TextArea fx:id="outputTextArea" editable="false" layoutX="20.0" layoutY="250.0" prefHeight="130.0" prefWidth="560.0" />
-      <Button fx:id="loadButton" layoutX="260.0" layoutY="200.0" mnemonicParsing="false" text="Open Video" />
+      <TextArea fx:id="outputTextArea" editable="false" layoutX="375.0" layoutY="20.0" prefHeight="360.0" prefWidth="210.0" />
+      <Button fx:id="loadButton" layoutX="42.0" layoutY="223.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="281.0" text="Open Video" AnchorPane.leftAnchor="42.0" AnchorPane.topAnchor="243.0" />
+      <Text layoutX="42.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PEOPLE" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="80.0" />
+         </font>
+      </Text>
+      <Text layoutX="44.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Person Recognition Tool" textAlignment="CENTER">
+         <font>
+            <Font name="System Italic" size="27.0" />
+         </font>
+      </Text>
+      <Label layoutX="44.0" layoutY="202.0" text="Precision (in seconds):">
+         <tooltip>
+            <Tooltip text="Lower values mean higher processing time." />
+         </tooltip>
+      </Label>
+      <TextField layoutX="176.0" layoutY="198.0" text="5" />
+      <Text layoutX="42.0" layoutY="376.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Developed by Eduardo Sarmento" />
    </children>
 </AnchorPane>
